all edge cases scenarios handled, added unit tests for every class